# csv-parser

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  classCsv_1_1CellDoubleValue-members.html  classCsv_1_1CellDoubleValue.html  classCsv_1_1CellReference-members.html  classCsv_1_1CellReference.html  classCsv_1_1CellStringBuffer-members.html  classCsv_1_1CellStringBuffer.html  classCsv_1_1CellStringReference-members.html  classCsv_1_1CellStringReference.html  classCsv_1_1CellStringValue-members.html  classCsv_1_1CellStringValue.html  classCsv_1_1CellTrait-members.html  classCsv_1_1CellTrait.html  classCsv_1_1CellValue-members.html  classCsv_1_1CellValue.html  classCsv_1_1MatrixInformation-members.html  classCsv_1_1MatrixInformation.html  classCsv_1_1ParseError-members.html  classCsv_1_1ParseError.html  classCsv_1_1Parser-members.html  classCsv_1_1Parser.html  classes.html  csv__cell_8h.html  csv__cell_8h_source.html  csv__cell__string__buffer_8h.html  csv__cell__string__buffer_8h_source.html  csv__error_8h.html  csv__error_8h_source.html  csv__matrix_8h.html  csv__matrix_8h_source.html  csv__parser_8h.html  csv__parser_8h_source.html  csv__policies_8h.html  csv__policies_8h_source.html  csv__util_8h.html  (+12 more)
.github/workflows/: api-docs.yml  build-and-test.yml  cmake.yml
catch2/: catch.hpp
csv_parser/: csv_cell.h  csv_cell_string_buffer.h  csv_error.h  csv_matrix.h  csv_parser.h  csv_policies.h  csv_util.h
doc/: CMakeLists.txt
doc/theme/: footer.html  version.txt
doc/theme/that_style/: .gitignore
examples/: example_compiletime.cpp  example_runtime.cpp  example_runtime_numeric.cpp  readme_examples.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+4 more)
tests/: test_csv_cell.cpp  test_csv_parser.cpp  test_csv_parser_matrix.cpp  test_csv_util.cpp
